QuickSwitch feature: Check whether launcher package is installed. A plausibility check is absolutely necessary. I see tons of people stuck in a bootloop that didn't have the appropriate launcher apps installed.
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/quickswitch_strings.xml
+++ b/res/values-de/quickswitch_strings.xml
@@ -4,5 +4,7 @@
     <!-- Title text for quickswitch feature. [CHAR LIMIT=60] -->
     <string name="quickswitch_launcher_title">QuickSwitch</string>
     <!-- Summary text for quickswitch feature.. [CHAR LIMIT=NONE] -->
-    <string name="quickswitch_launcher_summary">Standard-Homescreen-Anwendung festlegen.</string>
+    <string name="quickswitch_launcher_summary">Standard-Launcher festlegen.</string>
+    <!-- Toast message for quickswitch feature. [CHAR LIMIT=60] -->
+    <string name="quickswitch_launcher_toast">Dieser Launcher ist derzeit nicht installiert.</string>
 </resources>
