--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -50,8 +50,8 @@
         settings:controller="com.android.settings.gestures.LongPressPowerSensitivityPreferenceController"
     />
 
-    <com.pixeldust.support.preference.SecureSettingSwitchPreference
-        android:key="advanced_reboot"
+    <com.pixeldust.support.preference.SystemSettingSwitchPreference
+        android:key="global_actions_advanced"
         android:title="@string/global_actions_advanced_reboot_title"
         android:summary="@string/global_actions_advanced_reboot_summary"
         android:defaultValue="false" />
