--- a/res/values/pixeldust_arrays.xml
+++ b/res/values/pixeldust_arrays.xml
@@ -4,6 +4,16 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <!-- Settings dashboard styles-->
+    <string-array name="settings_dashboard_style_entries" translatable="false">
+        <item>@string/settings_dashboard_style_aosp</item>
+        <item>@string/settings_dashboard_style_dot</item>
+    </string-array>
+    <string-array name="settings_dashboard_style_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+    
     <!-- Lockscreen album art filter -->
     <string-array name="lockscreen_albumart_filter_entries">
         <item>@string/lockscreen_albumart_filter_none</item>
