--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -4,6 +4,10 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <!-- PixelDust Dashboard-->
+    <string name="pixeldust_dashboard_title">Pixel Dust Settings</string>
+    <string name="pixeldust_dashboard_summary">Another one bites The Dust!</string>
+
     <!-- Settings dashboard style -->
     <string name="settings_dashboard_style_title">Settings style</string>
     <string name="settings_dashboard_style_summary">Settings homepage and UI style</string>
