Settings: Powermenu Torch option [2/2]
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -368,4 +368,5 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="global_actions_soundpanel">Soundpanel</string>
     <string name="global_actions_settings">Einstellungen</string>
     <string name="global_actions_device_controls">Gerätesteuerung</string>
+    <string name="global_actions_powermenu_torch">Taschenlampe</string>
 </resources>
