Fix syntax error

--- a/res-ui/layout/dot_dashboard_preference_phone.xml
+++ b/res-ui/layout/dot_dashboard_preference_phone.xml
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="marquee"
             android:singleLine="true"
-            style="@color/pixeldust_color_accent2 />
+            style="@color/pixeldust_color_accent2" />
 
         <TextView
             android:id="@android:id/summary"
