--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -119,23 +119,12 @@ When the screen is off, the torch can be enabled with one of the following key c
     <string name="keyguard_show_battery_always_summary">Always show a battery bar on the ambient display</string>
 
     <!-- Lock screen media artwork -->
-    <string name="lockscreen_album_media_art_toggle">Lockscreen media artwork</string>
-    <string name="lockscreen_album_media_art_summary">Show currently playing media artwork on the lockscreen</string>
+    <string name="lockscreen_media_art_options_title">Media notifications</string>
+    <string name="lockscreen_media_metadata_toggle">Lockscreen media artwork</string>
+    <string name="lockscreen_media_metadata_summary">Show currently playing media artwork on the lockscreen</string>
 
     <!-- Lockscreen album art filter -->
-    <string name="lockscreen_media_art_options_title">Media notifications</string>
-    <string name="lockscreen_albumart_filter_title">Media cover art filter</string>
-    <string name="lockscreen_albumart_filter_none">None</string>
-    <string name="lockscreen_albumart_filter_grayscale">Grayscale</string>
-    <string name="lockscreen_albumart_filter_tint">Accent tinted</string>
-    <string name="lockscreen_albumart_filter_blur">Blur</string>
-    <string name="lockscreen_albumart_filter_grayblur">Grayscale and blurred</string>
-
-    <string name="artwork_media_background_enable_blur_title">Blur media media notification artwork background</string>
-    <string name="artwork_media_background_blur_radius_title">Blur amount for media notification artwork</string>
-    <string name="media_artwork_fade_percent_title">Fade percent for media notification artwork</string>
-    <string name="lockscreen_albumart_filter_blur_radius_title">Blur amount for lockscreen media artwork</string>
-    <string name="ls_media_artwork_fade_percent_title">Fade amount for lockscreen media artwork</string>
+    <string name="lockscreen_media_blur_title">Adjust blur level</string>
 
     <!-- Preference and settings suggestion title text for screen off UDFPS  (device) [CHAR LIMIT=60]-->
     <string name="ambient_display_screen_off_udfps_title">Long press on fingerprint sensor to unlock device</string>
