--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -328,10 +328,25 @@ When the screen is off, the torch can be enabled with one of the following key c
     <string name="hide_lockscreen_status_bar_title">Hide status bar</string>
     <string name="hide_lockscreen_status_bar_summary">Hide status bar on lock screen</string>
 
-    <!-- Statusbar Clock background chip -->
+    <!-- Statusbar Clock -->
     <string name="clock_category_title">Clock</string>
+    <string name="status_bar_clock_title">Clock customization</string>
+    <string name="status_bar_clock_summary">Change position and background chip</string>
     <string name="statusbar_clock_chip_title">Background chip</string>
-    <string name="statusbar_clock_chip_summary">Display accented chip behind clock</string> 
+    <string name="statusbar_clock_chip_summary">Display accented chip behind clock</string>
+
+    <!-- Clock position -->
+    <string name="status_bar_clock_position_center">Center</string>
+    <string name="status_bar_clock_position_left">Left</string>
+    <string name="status_bar_clock_position_right">Right</string>
+    <string name="status_bar_clock_position_title">Clock position</string>
+
+    <!-- Clock AM/PM -->
+    <string name="status_bar_am_pm_hidden">Hidden</string>
+    <string name="status_bar_am_pm_normal">Normal</string>
+    <string name="status_bar_am_pm_small">Small</string>
+    <string name="status_bar_am_pm_title">Clock AM/PM style</string>
+    <string name="status_bar_am_pm_unavailable">24-hour clock is enabled</string>
 
     <!-- Brightness slider styles -->
     <string name="theme_customization_brightness_slider_title">Brightness slider style</string>
