--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -25,11 +25,12 @@
     <PreferenceCategory
         android:title="@string/clock_category_title">
 
-        <com.pixeldust.support.preference.SystemSettingSwitchPreference
-            android:key="statusbar_clock_chip"
-            android:title="@string/statusbar_clock_chip_title"
-            android:summary="@string/statusbar_clock_chip_summary"
-            android:defaultValue="false" />
+        <Preference
+            android:key="status_bar_clock"
+            android:fragment="com.pixeldust.settings.statusbar.ClockDateSettings"
+            android:title="@string/status_bar_clock_title"
+            android:summary="@string/status_bar_clock_summary" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
