--- a/res/xml/configure_notification_settings.xml
+++ b/res/xml/configure_notification_settings.xml
@@ -112,12 +112,12 @@
         android:key="advanced_section_header"
         android:title="@string/advanced_section_header">
 
-        <com.pixeldust.support.preference.SystemSettingSwitchPreference
+        <Preference
             android:key="island_notification"
             android:title="@string/island_notification_title"
             android:summary="@string/island_notification_summary"
             android:order="17"
-            android:defaultValue="false" />
+            android:fragment="com.pixeldust.settings.notifications.Island" />
 
         <com.android.settingslib.RestrictedPreference
             android:key="zen_mode_notifications"
