--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -380,9 +380,12 @@ When the screen is off, the torch can be enabled with one of the following key c
     <string name="theme_customization_quicksettings_tiles_title">QS tiles style</string>
     <string name="theme_customization_quicksettings_tiles_summary">Set custom QS tiles style</string>
 
-    <!-- Island notification reTicker -->
-    <string name="island_notification_title">Island notification reTicker</string>
-    <string name="island_notification_summary">Replace heads-up notification with slim and less invasive version of redesigned ticker</string>
+    <!-- Island notification -->
+    <string name="island_notification_title">Island notification</string>
+    <string name="island_notification_summary">Displays a heads-up notification in the style of iOS\'s Dynamic Island.</string>
+    <string name="island_notification_footer_text">
+        The Island Notification feature, inspired by iOS\'s Dynamic Island, transforms Android\'s heads-up notifications into quick-access and compact notification utility.\nIsland Quick Access Controls includes the following features:\n1. Tap island notification to quick answer phone calls.\n2. Long press island notification to reject phone calls.\n3. Long press island notification to expand the island notification preview.
+    </string>
 
     <!-- Statusbar colored icons -->
     <string name="statusbar_colored_icons_title">Colored icons</string>
