--- a/res/xml/clock_date_settings.xml
+++ b/res/xml/clock_date_settings.xml
@@ -51,4 +51,33 @@
         android:summary="@string/statusbar_clock_chip_summary"
         android:defaultValue="false" />
 
+    <com.pixeldust.support.preference.SystemSettingListPreference
+        android:key="status_bar_clock_date_display"
+        android:title="@string/clock_date_display"
+        android:summary="@string/clock_date_display_summary"
+        android:entries="@array/clock_date_display_entries"
+        android:entryValues="@array/clock_date_display_values"
+        android:dependency="status_bar_clock" />
+
+    <com.pixeldust.support.preference.SystemSettingListPreference
+        android:key="status_bar_clock_date_style"
+        android:title="@string/clock_date_style"
+        android:entries="@array/clock_date_style_entries"
+        android:entryValues="@array/clock_date_style_values"
+        android:dependency="status_bar_clock" />
+
+    <com.pixeldust.support.preference.SystemSettingListPreference
+        android:key="status_bar_clock_date_format"
+        android:title="@string/clock_date_format"
+        android:entries="@array/clock_date_format_entries_values"
+        android:entryValues="@array/clock_date_format_entries_values"
+        android:dependency="status_bar_clock" />
+
+    <com.pixeldust.support.preference.SystemSettingListPreference
+        android:key="status_bar_clock_date_position"
+        android:title="@string/clock_date_position"
+        android:entries="@array/clock_date_position_entries"
+        android:entryValues="@array/clock_date_position_values"
+        android:dependency="status_bar_clock" />
+
 </PreferenceScreen>
