--- a/res/xml/general_settings.xml
+++ b/res/xml/general_settings.xml
@@ -15,4 +15,16 @@
             android:summary="@string/use_photos_spoof_summary"
             android:persistent="false" />
 
+        <!-- Gaming mode -->
+        <Preference
+            android:key="gaming_mode"
+            android:title="@string/gaming_mode_title"
+            android:summary="@string/gaming_mode_summary">
+
+            <intent
+                android:action="android.intent.action.MAIN"
+                android:targetPackage="org.exthmui.game"
+                android:targetClass="org.exthmui.game.ui.MainActivity" />
+        </Preference>
+
 </PreferenceScreen>
