--- a/res/values/pixeldust_strings.xml
+++ b/res/values/pixeldust_strings.xml
@@ -177,7 +177,7 @@ When the screen is off, the torch can be enabled with one of the following key c
 
     <!-- Gesture navbar length -->
     <string name="gesture_navbar_length_title">Pill length</string>
-    <string name="short_label">Hidden</string>
+    <string name="short_label">Short</string>
     <string name="long_label">Long</string>
 
     <!-- Back gesture height -->
