--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -329,10 +329,11 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <string name="statusbar_clock_chip_summary">Akzentfarbigen Chip hinter der Uhr anzeigen</string>
 
     <!-- Clock position -->
+    <string name="status_bar_clock_position_title">Position der Uhr</string>
     <string name="status_bar_clock_position_center">Zentriert</string>
     <string name="status_bar_clock_position_left">Links</string>
     <string name="status_bar_clock_position_right">Rechts</string>
-    <string name="status_bar_clock_position_title">Position der Uhr</string>
+    <string name="status_bar_clock_position_hidden">Ausblenden</string>
 
     <!-- Clock AM/PM -->
     <string name="status_bar_am_pm_hidden">Ausgeblendet</string>
