--- a/res/values-de/pixeldust_strings.xml
+++ b/res/values-de/pixeldust_strings.xml
@@ -184,16 +184,16 @@ Bei ausgeschaltetem Display lässt sich die Taschenlampe durch eine der folgende
     <!-- Back gesture height -->
     <string name="back_height_low_label">Ganzer Bildschirm</string>
     <string name="back_height_high_label">Unterer Bereich</string>
-    <string name="back_height_title">Bereich für die Zurück-Geste</string>
+    <string name="back_height_title">Touch-Bereich für die Zurück-Geste</string>
     <string name="back_height_summary">Bildschirmbereich für die Zurück-Geste festlegen.</string>
 
     <!-- Back gesture animation -->
-    <string name="back_gesture_arrow_title">Animation der Zurück-Geste</string>
-    <string name="back_gesture_arrow_summary">Pfeil für die Zurück-Geste animieren</string>
+    <string name="back_gesture_arrow_title">Animation der Touch-Geste</string>
+    <string name="back_gesture_arrow_summary">Zurück-Pfeil für die Touch-Geste animieren</string>
 
     <!-- Back gesture haptic -->
-    <string name="back_gesture_haptic_title">Haptik der Zurück-Geste</string>
-    <string name="back_gesture_haptic_summary">Bei Nutzung der Zurück-Geste vibirieren</string>
+    <string name="back_gesture_haptic_title">Haptik der Touch-Geste</string>
+    <string name="back_gesture_haptic_summary">Bei Nutzung der Zurück-Geste vibrieren</string>
 
     <!-- Gesture navbar radius -->
     <string name="gesture_navbar_radius_title">Radius der Pille</string>
