--- a/res/xml/general_settings.xml
+++ b/res/xml/general_settings.xml
@@ -9,11 +9,22 @@
         android:key="general_settings"
         android:title="@string/general_settings_title">
 
+        <!-- Photos spoof -->
         <com.pixeldust.support.preference.SystemSettingSwitchPreference
             android:key="use_photos_spoof"
             android:title="@string/use_photos_spoof_title"
             android:summary="@string/use_photos_spoof_summary"
             android:persistent="false" />
+
+		<!-- Play integrity fix -->
+		<Preference
+		    android:key="pif"
+		    android:title="@string/pif_title"
+		    android:summary="@string/pif_summary">
+		    <intent android:action="android.intent.action.MAIN"
+		        android:targetPackage="com.goolag.pif"
+		        android:targetClass="com.goolag.pif.PifActivity" />
+		</Preference>
 
         <!-- Gaming mode -->
         <Preference
